tests/core/snapshots/test-query.md_client.snap
---
source: tests/core/spec.rs
expression: formatted
---
type Query {
  foo: String
}

schema {
  query: Query
}
