tests/core/snapshots/test-recursive-types.md_error.snap
---
source: tests/core/spec.rs
expression: errors
---
[
  {
    "message": "No resolver has been found in the schema",
    "trace": [
      "Query",
      "repository"
    ],
    "description": null
  }
]
