tests/core/snapshots/test-required-fields.md_10.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "nonePresent": []
    }
  }
}
