tests/core/snapshots/test-required-fields.md_11.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "innerMissing": null
    }
  }
}
