tests/core/snapshots/test-required-fields.md_14.snap
---
source: tests/core/spec.rs
expression: response
---
{
  "status": 200,
  "headers": {
    "content-type": "application/json"
  },
  "body": {
    "data": {
      "outerPresent": [
        {
          "id": 1,
          "bar": "bar_1"
        },
        {
          "id": 2,
          "bar": "bar_2"
        }
      ]
    }
  }
}
